codea/oxout.output
Grammar

    0 $accept: yyyAugNonterm $end

    1 $@1: /* empty */

    2 yyyAugNonterm: $@1 Input

    3 Input: Program

    4 Program: /* empty */
    5        | Program Structdef T_SEMICOLON
    6        | Program Funcdef T_SEMICOLON

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats T_END

    8 Structdef: T_STRUCT T_ID T_DOUBLE_POINT Felder T_END

    9 Params: /* empty */
   10       | Params T_ID

   11 Felder: /* empty */
   12       | Felder T_ID

   13 Stats: /* empty */
   14      | Stats Stat T_SEMICOLON

   15 LetRec: /* empty */
   16       | LetRec T_ID T_EQUAL Expr T_SEMICOLON

   17 CondRec: /* empty */
   18        | CondRec Expr T_THEN Stats T_END T_SEMICOLON

   19 Stat: T_RETURN Expr
   20     | T_COND CondRec T_END
   21     | T_LET LetRec T_IN Stats T_END
   22     | T_WITH Expr T_DOUBLE_POINT T_ID T_DO Stats T_END
   23     | Lexpr T_EQUAL Expr
   24     | Term

   25 Lexpr: T_ID
   26      | Term T_POINT T_ID

   27 Expr: Term
   28     | Sign Term
   29     | PlusExpr
   30     | MultExpr
   31     | OrExpr
   32     | Term T_GREATER Term
   33     | Term T_NOT_EQUAL Term

   34 PlusExpr: Term T_PLUS Term
   35         | PlusExpr T_PLUS Term

   36 MultExpr: Term T_MUL Term
   37         | MultExpr T_MUL Term

   38 OrExpr: Term T_OR Term
   39       | OrExpr T_OR Term

   40 Sign: T_NOT
   41     | T_MINUS
   42     | Sign T_NOT
   43     | Sign T_MINUS

   44 Term: T_BRACKET_LEFT Expr T_BRACKET_RIGHT
   45     | T_NUM
   46     | Term T_POINT T_ID
   47     | T_ID
   48     | T_ID T_BRACKET_LEFT T_BRACKET_RIGHT
   49     | T_ID T_BRACKET_LEFT ExprList T_BRACKET_RIGHT
   50     | T_ID T_BRACKET_LEFT ExprList T_COLON T_BRACKET_RIGHT

   51 ExprList: Expr
   52         | ExprList T_COLON Expr


Terminals, with rules where they appear

$end (0) 0
error (256)
T_WITH (258) 22
T_STRUCT (259) 8
T_RETURN (260) 19
T_NUM (261) 45
T_COND (262) 20
T_END (263) 7 8 18 20 21 22
T_ID (264) 7 8 10 12 16 22 25 26 46 47 48 49 50
T_LET (265) 21
T_IN (266) 21
T_FUNC (267) 7
T_OR (268) 38 39
T_NOT (269) 40 42
T_DO (270) 22
T_THEN (271) 18
T_BRACKET_LEFT (272) 7 44 48 49 50
T_BRACKET_RIGHT (273) 7 44 48 49 50
T_DOUBLE_POINT (274) 8 22
T_SEMICOLON (275) 5 6 14 16 18
T_EQUAL (276) 16 23
T_POINT (277) 26 46
T_MINUS (278) 41 43
T_PLUS (279) 34 35
T_MUL (280) 36 37
T_GREATER (281) 32
T_NOT_EQUAL (282) 33
T_COLON (283) 50 52


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
yyyAugNonterm (30)
    on left: 2, on right: 0
$@1 (31)
    on left: 1, on right: 2
Input (32)
    on left: 3, on right: 2
Program (33)
    on left: 4 5 6, on right: 3 5 6
Funcdef (34)
    on left: 7, on right: 6
Structdef (35)
    on left: 8, on right: 5
Params (36)
    on left: 9 10, on right: 7 10
Felder (37)
    on left: 11 12, on right: 8 12
Stats (38)
    on left: 13 14, on right: 7 14 18 21 22
LetRec (39)
    on left: 15 16, on right: 16 21
CondRec (40)
    on left: 17 18, on right: 18 20
Stat (41)
    on left: 19 20 21 22 23 24, on right: 14
Lexpr (42)
    on left: 25 26, on right: 23
Expr (43)
    on left: 27 28 29 30 31 32 33, on right: 16 18 19 22 23 44 51 52
PlusExpr (44)
    on left: 34 35, on right: 29 35
MultExpr (45)
    on left: 36 37, on right: 30 37
OrExpr (46)
    on left: 38 39, on right: 31 39
Sign (47)
    on left: 40 41 42 43, on right: 28 42 43
Term (48)
    on left: 44 45 46 47 48 49 50, on right: 24 26 27 28 32 33 34 35
    36 37 38 39 46
ExprList (49)
    on left: 51 52, on right: 49 50 52


state 0

    0 $accept: . yyyAugNonterm $end

    $default  reduce using rule 1 ($@1)

    yyyAugNonterm  go to state 1
    $@1            go to state 2


state 1

    0 $accept: yyyAugNonterm . $end

    $end  shift, and go to state 3


state 2

    2 yyyAugNonterm: $@1 . Input

    $default  reduce using rule 4 (Program)

    Input    go to state 4
    Program  go to state 5


state 3

    0 $accept: yyyAugNonterm $end .

    $default  accept


state 4

    2 yyyAugNonterm: $@1 Input .

    $default  reduce using rule 2 (yyyAugNonterm)


state 5

    3 Input: Program .
    5 Program: Program . Structdef T_SEMICOLON
    6        | Program . Funcdef T_SEMICOLON

    T_STRUCT  shift, and go to state 6
    T_FUNC    shift, and go to state 7

    $default  reduce using rule 3 (Input)

    Funcdef    go to state 8
    Structdef  go to state 9


state 6

    8 Structdef: T_STRUCT . T_ID T_DOUBLE_POINT Felder T_END

    T_ID  shift, and go to state 10


state 7

    7 Funcdef: T_FUNC . T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats T_END

    T_ID  shift, and go to state 11


state 8

    6 Program: Program Funcdef . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 12


state 9

    5 Program: Program Structdef . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 13


state 10

    8 Structdef: T_STRUCT T_ID . T_DOUBLE_POINT Felder T_END

    T_DOUBLE_POINT  shift, and go to state 14


state 11

    7 Funcdef: T_FUNC T_ID . T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats T_END

    T_BRACKET_LEFT  shift, and go to state 15


state 12

    6 Program: Program Funcdef T_SEMICOLON .

    $default  reduce using rule 6 (Program)


state 13

    5 Program: Program Structdef T_SEMICOLON .

    $default  reduce using rule 5 (Program)


state 14

    8 Structdef: T_STRUCT T_ID T_DOUBLE_POINT . Felder T_END

    $default  reduce using rule 11 (Felder)

    Felder  go to state 16


state 15

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT . Params T_BRACKET_RIGHT Stats T_END

    $default  reduce using rule 9 (Params)

    Params  go to state 17


state 16

    8 Structdef: T_STRUCT T_ID T_DOUBLE_POINT Felder . T_END
   12 Felder: Felder . T_ID

    T_END  shift, and go to state 18
    T_ID   shift, and go to state 19


state 17

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params . T_BRACKET_RIGHT Stats T_END
   10 Params: Params . T_ID

    T_ID             shift, and go to state 20
    T_BRACKET_RIGHT  shift, and go to state 21


state 18

    8 Structdef: T_STRUCT T_ID T_DOUBLE_POINT Felder T_END .

    $default  reduce using rule 8 (Structdef)


state 19

   12 Felder: Felder T_ID .

    $default  reduce using rule 12 (Felder)


state 20

   10 Params: Params T_ID .

    $default  reduce using rule 10 (Params)


state 21

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT . Stats T_END

    $default  reduce using rule 13 (Stats)

    Stats  go to state 22


state 22

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats . T_END
   14 Stats: Stats . Stat T_SEMICOLON

    T_WITH          shift, and go to state 23
    T_RETURN        shift, and go to state 24
    T_NUM           shift, and go to state 25
    T_COND          shift, and go to state 26
    T_END           shift, and go to state 27
    T_ID            shift, and go to state 28
    T_LET           shift, and go to state 29
    T_BRACKET_LEFT  shift, and go to state 30

    Stat   go to state 31
    Lexpr  go to state 32
    Term   go to state 33


state 23

   22 Stat: T_WITH . Expr T_DOUBLE_POINT T_ID T_DO Stats T_END

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 37
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Sign      go to state 41
    Term      go to state 42


state 24

   19 Stat: T_RETURN . Expr

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 43
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Sign      go to state 41
    Term      go to state 42


state 25

   45 Term: T_NUM .

    $default  reduce using rule 45 (Term)


state 26

   20 Stat: T_COND . CondRec T_END

    $default  reduce using rule 17 (CondRec)

    CondRec  go to state 44


state 27

    7 Funcdef: T_FUNC T_ID T_BRACKET_LEFT Params T_BRACKET_RIGHT Stats T_END .

    $default  reduce using rule 7 (Funcdef)


state 28

   25 Lexpr: T_ID .
   47 Term: T_ID .
   48     | T_ID . T_BRACKET_LEFT T_BRACKET_RIGHT
   49     | T_ID . T_BRACKET_LEFT ExprList T_BRACKET_RIGHT
   50     | T_ID . T_BRACKET_LEFT ExprList T_COLON T_BRACKET_RIGHT

    T_BRACKET_LEFT  shift, and go to state 45

    T_EQUAL   reduce using rule 25 (Lexpr)
    $default  reduce using rule 47 (Term)


state 29

   21 Stat: T_LET . LetRec T_IN Stats T_END

    $default  reduce using rule 15 (LetRec)

    LetRec  go to state 46


state 30

   44 Term: T_BRACKET_LEFT . Expr T_BRACKET_RIGHT

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 47
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Sign      go to state 41
    Term      go to state 42


state 31

   14 Stats: Stats Stat . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 48


state 32

   23 Stat: Lexpr . T_EQUAL Expr

    T_EQUAL  shift, and go to state 49


state 33

   24 Stat: Term .
   26 Lexpr: Term . T_POINT T_ID
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 50

    $default  reduce using rule 24 (Stat)


state 34

   47 Term: T_ID .
   48     | T_ID . T_BRACKET_LEFT T_BRACKET_RIGHT
   49     | T_ID . T_BRACKET_LEFT ExprList T_BRACKET_RIGHT
   50     | T_ID . T_BRACKET_LEFT ExprList T_COLON T_BRACKET_RIGHT

    T_BRACKET_LEFT  shift, and go to state 45

    $default  reduce using rule 47 (Term)


state 35

   40 Sign: T_NOT .

    $default  reduce using rule 40 (Sign)


state 36

   41 Sign: T_MINUS .

    $default  reduce using rule 41 (Sign)


state 37

   22 Stat: T_WITH Expr . T_DOUBLE_POINT T_ID T_DO Stats T_END

    T_DOUBLE_POINT  shift, and go to state 51


state 38

   29 Expr: PlusExpr .
   35 PlusExpr: PlusExpr . T_PLUS Term

    T_PLUS  shift, and go to state 52

    $default  reduce using rule 29 (Expr)


state 39

   30 Expr: MultExpr .
   37 MultExpr: MultExpr . T_MUL Term

    T_MUL  shift, and go to state 53

    $default  reduce using rule 30 (Expr)


state 40

   31 Expr: OrExpr .
   39 OrExpr: OrExpr . T_OR Term

    T_OR  shift, and go to state 54

    $default  reduce using rule 31 (Expr)


state 41

   28 Expr: Sign . Term
   42 Sign: Sign . T_NOT
   43     | Sign . T_MINUS

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 55
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 56

    Term  go to state 57


state 42

   27 Expr: Term .
   32     | Term . T_GREATER Term
   33     | Term . T_NOT_EQUAL Term
   34 PlusExpr: Term . T_PLUS Term
   36 MultExpr: Term . T_MUL Term
   38 OrExpr: Term . T_OR Term
   46 Term: Term . T_POINT T_ID

    T_OR         shift, and go to state 58
    T_POINT      shift, and go to state 59
    T_PLUS       shift, and go to state 60
    T_MUL        shift, and go to state 61
    T_GREATER    shift, and go to state 62
    T_NOT_EQUAL  shift, and go to state 63

    $default  reduce using rule 27 (Expr)


state 43

   19 Stat: T_RETURN Expr .

    $default  reduce using rule 19 (Stat)


state 44

   18 CondRec: CondRec . Expr T_THEN Stats T_END T_SEMICOLON
   20 Stat: T_COND CondRec . T_END

    T_NUM           shift, and go to state 25
    T_END           shift, and go to state 64
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 65
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Sign      go to state 41
    Term      go to state 42


state 45

   48 Term: T_ID T_BRACKET_LEFT . T_BRACKET_RIGHT
   49     | T_ID T_BRACKET_LEFT . ExprList T_BRACKET_RIGHT
   50     | T_ID T_BRACKET_LEFT . ExprList T_COLON T_BRACKET_RIGHT

    T_NUM            shift, and go to state 25
    T_ID             shift, and go to state 34
    T_NOT            shift, and go to state 35
    T_BRACKET_LEFT   shift, and go to state 30
    T_BRACKET_RIGHT  shift, and go to state 66
    T_MINUS          shift, and go to state 36

    Expr      go to state 67
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Sign      go to state 41
    Term      go to state 42
    ExprList  go to state 68


state 46

   16 LetRec: LetRec . T_ID T_EQUAL Expr T_SEMICOLON
   21 Stat: T_LET LetRec . T_IN Stats T_END

    T_ID  shift, and go to state 69
    T_IN  shift, and go to state 70


state 47

   44 Term: T_BRACKET_LEFT Expr . T_BRACKET_RIGHT

    T_BRACKET_RIGHT  shift, and go to state 71


state 48

   14 Stats: Stats Stat T_SEMICOLON .

    $default  reduce using rule 14 (Stats)


state 49

   23 Stat: Lexpr T_EQUAL . Expr

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 72
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Sign      go to state 41
    Term      go to state 42


state 50

   26 Lexpr: Term T_POINT . T_ID
   46 Term: Term T_POINT . T_ID

    T_ID  shift, and go to state 73


state 51

   22 Stat: T_WITH Expr T_DOUBLE_POINT . T_ID T_DO Stats T_END

    T_ID  shift, and go to state 74


state 52

   35 PlusExpr: PlusExpr T_PLUS . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 75


state 53

   37 MultExpr: MultExpr T_MUL . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 76


state 54

   39 OrExpr: OrExpr T_OR . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 77


state 55

   42 Sign: Sign T_NOT .

    $default  reduce using rule 42 (Sign)


state 56

   43 Sign: Sign T_MINUS .

    $default  reduce using rule 43 (Sign)


state 57

   28 Expr: Sign Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 28 (Expr)


state 58

   38 OrExpr: Term T_OR . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 78


state 59

   46 Term: Term T_POINT . T_ID

    T_ID  shift, and go to state 79


state 60

   34 PlusExpr: Term T_PLUS . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 80


state 61

   36 MultExpr: Term T_MUL . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 81


state 62

   32 Expr: Term T_GREATER . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 82


state 63

   33 Expr: Term T_NOT_EQUAL . Term

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_BRACKET_LEFT  shift, and go to state 30

    Term  go to state 83


state 64

   20 Stat: T_COND CondRec T_END .

    $default  reduce using rule 20 (Stat)


state 65

   18 CondRec: CondRec Expr . T_THEN Stats T_END T_SEMICOLON

    T_THEN  shift, and go to state 84


state 66

   48 Term: T_ID T_BRACKET_LEFT T_BRACKET_RIGHT .

    $default  reduce using rule 48 (Term)


state 67

   51 ExprList: Expr .

    $default  reduce using rule 51 (ExprList)


state 68

   49 Term: T_ID T_BRACKET_LEFT ExprList . T_BRACKET_RIGHT
   50     | T_ID T_BRACKET_LEFT ExprList . T_COLON T_BRACKET_RIGHT
   52 ExprList: ExprList . T_COLON Expr

    T_BRACKET_RIGHT  shift, and go to state 85
    T_COLON          shift, and go to state 86


state 69

   16 LetRec: LetRec T_ID . T_EQUAL Expr T_SEMICOLON

    T_EQUAL  shift, and go to state 87


state 70

   21 Stat: T_LET LetRec T_IN . Stats T_END

    $default  reduce using rule 13 (Stats)

    Stats  go to state 88


state 71

   44 Term: T_BRACKET_LEFT Expr T_BRACKET_RIGHT .

    $default  reduce using rule 44 (Term)


state 72

   23 Stat: Lexpr T_EQUAL Expr .

    $default  reduce using rule 23 (Stat)


state 73

   26 Lexpr: Term T_POINT T_ID .
   46 Term: Term T_POINT T_ID .

    T_EQUAL   reduce using rule 26 (Lexpr)
    $default  reduce using rule 46 (Term)


state 74

   22 Stat: T_WITH Expr T_DOUBLE_POINT T_ID . T_DO Stats T_END

    T_DO  shift, and go to state 89


state 75

   35 PlusExpr: PlusExpr T_PLUS Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 35 (PlusExpr)


state 76

   37 MultExpr: MultExpr T_MUL Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 37 (MultExpr)


state 77

   39 OrExpr: OrExpr T_OR Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 39 (OrExpr)


state 78

   38 OrExpr: Term T_OR Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 38 (OrExpr)


state 79

   46 Term: Term T_POINT T_ID .

    $default  reduce using rule 46 (Term)


state 80

   34 PlusExpr: Term T_PLUS Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 34 (PlusExpr)


state 81

   36 MultExpr: Term T_MUL Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 36 (MultExpr)


state 82

   32 Expr: Term T_GREATER Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 32 (Expr)


state 83

   33 Expr: Term T_NOT_EQUAL Term .
   46 Term: Term . T_POINT T_ID

    T_POINT  shift, and go to state 59

    $default  reduce using rule 33 (Expr)


state 84

   18 CondRec: CondRec Expr T_THEN . Stats T_END T_SEMICOLON

    $default  reduce using rule 13 (Stats)

    Stats  go to state 90


state 85

   49 Term: T_ID T_BRACKET_LEFT ExprList T_BRACKET_RIGHT .

    $default  reduce using rule 49 (Term)


state 86

   50 Term: T_ID T_BRACKET_LEFT ExprList T_COLON . T_BRACKET_RIGHT
   52 ExprList: ExprList T_COLON . Expr

    T_NUM            shift, and go to state 25
    T_ID             shift, and go to state 34
    T_NOT            shift, and go to state 35
    T_BRACKET_LEFT   shift, and go to state 30
    T_BRACKET_RIGHT  shift, and go to state 91
    T_MINUS          shift, and go to state 36

    Expr      go to state 92
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Sign      go to state 41
    Term      go to state 42


state 87

   16 LetRec: LetRec T_ID T_EQUAL . Expr T_SEMICOLON

    T_NUM           shift, and go to state 25
    T_ID            shift, and go to state 34
    T_NOT           shift, and go to state 35
    T_BRACKET_LEFT  shift, and go to state 30
    T_MINUS         shift, and go to state 36

    Expr      go to state 93
    PlusExpr  go to state 38
    MultExpr  go to state 39
    OrExpr    go to state 40
    Sign      go to state 41
    Term      go to state 42


state 88

   14 Stats: Stats . Stat T_SEMICOLON
   21 Stat: T_LET LetRec T_IN Stats . T_END

    T_WITH          shift, and go to state 23
    T_RETURN        shift, and go to state 24
    T_NUM           shift, and go to state 25
    T_COND          shift, and go to state 26
    T_END           shift, and go to state 94
    T_ID            shift, and go to state 28
    T_LET           shift, and go to state 29
    T_BRACKET_LEFT  shift, and go to state 30

    Stat   go to state 31
    Lexpr  go to state 32
    Term   go to state 33


state 89

   22 Stat: T_WITH Expr T_DOUBLE_POINT T_ID T_DO . Stats T_END

    $default  reduce using rule 13 (Stats)

    Stats  go to state 95


state 90

   14 Stats: Stats . Stat T_SEMICOLON
   18 CondRec: CondRec Expr T_THEN Stats . T_END T_SEMICOLON

    T_WITH          shift, and go to state 23
    T_RETURN        shift, and go to state 24
    T_NUM           shift, and go to state 25
    T_COND          shift, and go to state 26
    T_END           shift, and go to state 96
    T_ID            shift, and go to state 28
    T_LET           shift, and go to state 29
    T_BRACKET_LEFT  shift, and go to state 30

    Stat   go to state 31
    Lexpr  go to state 32
    Term   go to state 33


state 91

   50 Term: T_ID T_BRACKET_LEFT ExprList T_COLON T_BRACKET_RIGHT .

    $default  reduce using rule 50 (Term)


state 92

   52 ExprList: ExprList T_COLON Expr .

    $default  reduce using rule 52 (ExprList)


state 93

   16 LetRec: LetRec T_ID T_EQUAL Expr . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 97


state 94

   21 Stat: T_LET LetRec T_IN Stats T_END .

    $default  reduce using rule 21 (Stat)


state 95

   14 Stats: Stats . Stat T_SEMICOLON
   22 Stat: T_WITH Expr T_DOUBLE_POINT T_ID T_DO Stats . T_END

    T_WITH          shift, and go to state 23
    T_RETURN        shift, and go to state 24
    T_NUM           shift, and go to state 25
    T_COND          shift, and go to state 26
    T_END           shift, and go to state 98
    T_ID            shift, and go to state 28
    T_LET           shift, and go to state 29
    T_BRACKET_LEFT  shift, and go to state 30

    Stat   go to state 31
    Lexpr  go to state 32
    Term   go to state 33


state 96

   18 CondRec: CondRec Expr T_THEN Stats T_END . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 99


state 97

   16 LetRec: LetRec T_ID T_EQUAL Expr T_SEMICOLON .

    $default  reduce using rule 16 (LetRec)


state 98

   22 Stat: T_WITH Expr T_DOUBLE_POINT T_ID T_DO Stats T_END .

    $default  reduce using rule 22 (Stat)


state 99

   18 CondRec: CondRec Expr T_THEN Stats T_END T_SEMICOLON .

    $default  reduce using rule 18 (CondRec)
